# CSLP

./: .gitignore  CMakeLists.txt  README.md  Relatorio.ltx  ResultBatch.sh  dconfig  results-hybrid.txt  results.txt
html/: BitStream_8cpp.html  BitStream_8h.html  BitStream_8h_source.html  BitStream_8hpp.html  BitStream_8hpp_source.html  Converter_8hpp.html  Converter_8hpp_source.html  Golomb_8cpp.html  Golomb_8h.html  Golomb_8h_source.html  Golomb_8hpp.html  Golomb_8hpp_source.html  HybridDecoder_8hpp.html  HybridDecoder_8hpp_source.html  HybridEncoder_8hpp.html  HybridEncoder_8hpp_source.html  Image_8cpp.html  Image_8h.html  Image_8h_source.html  Image_8hpp.html  Image_8hpp_source.html  InterDecoder_8hpp.html  InterDecoder_8hpp_source.html  InterEncoder_8hpp.html  InterEncoder_8hpp_source.html  IntraDecoder_8hpp.html  IntraDecoder_8hpp_source.html  IntraEncoder_8hpp.html  IntraEncoder_8hpp_source.html  Predictors_8hpp.html  Predictors_8hpp_source.html  annotated.html  classBitStream-members.html  classBitStream.html  classConverter-members.html  classConverter.html  classGolomb-members.html  classGolomb.html  classGolombDecoder-members.html  classGolombDecoder.html  (+31 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_1.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_1.js  functions_12.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  (+8 more)
images/: airplane2.ppm  bike3Gray.ppm
include/: BitStream.h  BitStream.hpp  Converter.hpp  Golomb.h  Golomb.hpp  HybridDecoder.hpp  HybridEncoder.hpp  Image.h  Image.hpp  InterDecoder.h  InterDecoder.hpp  InterEncoder.h  InterEncoder.hpp  IntraDecoder.h  IntraDecoder.hpp  IntraEncoder.h  IntraEncoder.hpp  Predictors.h  Predictors.hpp  image.h
latex/: BitStream_8cpp.tex  BitStream_8h.tex  BitStream_8h_source.tex  BitStream_8hpp.tex  BitStream_8hpp_source.tex  Converter_8hpp.tex  Converter_8hpp_source.tex  Golomb_8cpp.tex  Golomb_8h.tex  Golomb_8h_source.tex  Golomb_8hpp.tex  Golomb_8hpp_source.tex  HybridDecoder_8hpp.tex  HybridDecoder_8hpp_source.tex  HybridEncoder_8hpp.tex  HybridEncoder_8hpp_source.tex  Image_8cpp.tex  Image_8h.tex  Image_8h_source.tex  Image_8hpp.tex  Image_8hpp_source.tex  InterDecoder_8hpp.tex  InterDecoder_8hpp_source.tex  InterEncoder_8hpp.tex  InterEncoder_8hpp_source.tex  IntraDecoder_8hpp.tex  IntraDecoder_8hpp_source.tex  IntraEncoder_8hpp.tex  IntraEncoder_8hpp_source.tex  Predictors_8hpp.tex  Predictors_8hpp_source.tex  annotated.tex  classBitStream.tex  classConverter.tex  classGolomb.tex  classGolombDecoder.tex  classGolombEncoder.tex  classHybridDecoder.tex  classHybridEncoder.tex  classImage.tex  (+9 more)
src/: BitStream.cpp  BitStreamExample.cpp  CMakeCache.txt  CMakeLists.txt  Golomb.cpp  GolombExample.cpp  HybridDecoder.cpp  HybridEncoder.cpp  Image.cpp  ImageExample.cpp  InterDecoder.cpp  InterEncoder.cpp  IntraDecoder.cpp  IntraEncoder.cpp  Makefile  Predictors.cpp  VideoExample.cpp  cmake_install.cmake  image.cpp  image.h  main.cpp  video.cpp
src/deliverable_1/: CMakeLists.txt  image.cpp  image.h  main.cpp
src/deliverable_2/: BitStream.cpp  BitStream.h  CMakeLists.txt  Encoding.cpp  main.cpp
src/deliverable_2/test/: decode.txt  encode.txt
src/deliverable_3/: Colomb.h
static/images/: bike3Gray.ppm  bike3Threshold.ppm  bike3YUV.ppm
tests/: BitStreamExample.cpp  GolombExample.cpp  HybridDecoderExample.cpp  HybridEncoderBatch.cpp  HybridEncoderExample.cpp  ImageExample.cpp  IntraDecoderExample.cpp  IntraEncodeBatch.cpp  IntraEncoderExample.cpp  ReadYUVwithoutopencv.cpp  Video_Ex2.cpp  Video_Ex3.cpp
